--- a/index2.html
+++ b/index2.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignUp2</title>
-    <link rel="stylesheet" href="./main2.css">
+    <link rel="stylesheet" href="./css/main2.css">
 </head>
 <body>
-    <main>
+    <main class="container">
         <!-- LEFT COLUMN -->
-        <div>
+        <div class="left-column">
             <h1>Sign up</h1>
             <div>
                 <a href="#">Privacy plicy</a>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <!-- RIGHT COLUMN -->
-        <div>
+        <div class="right-column">
             <div>&#x2573;</div>
             <form>
                 SIGN UP FORMA
