--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <main>
+        <div class="left-side">
+            <h1>Sign up</h1>
+            <a href="#">Privacy policy & terms of service</a>
+        </div>
+    
+        <form>
+            <a href="#">&#x2573;</a><br>      
+            <label for="username">Username</label><br>
+            <input type="text" id="username" name="username"><br>
+            <label for="email">E-mail</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label for="password">Password</label><br>
+            <input type="password" id="password" name="password"><br>
+            <label for="rptpassword">Repeat password</label><br>
+            <input type="password" id="rptpassword" name="rptpassword"><br>
+            <input class="get-started" type="submit" value="Get started">
+            <p>or</p>
+            <a href="#">Sign in</a>
+        </form>
+    </main>
 
-    <div class="left-side">
-        <h1>Sign up</h1>
-        <a href="#">Privacy policy & terms of service</a>
-    </div>
-
-    <form>
-        <a href="#">&#x2573;</a><br>      
-        <label for="username">Username</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="email">E-mail</label><br>
-        <input type="email" id="email" name="email"><br>
-        <label for="password">Password</label><br>
-        <input type="password" id="password" name="password"><br>
-        <label for="rptpassword">Repeat password</label><br>
-        <input type="password" id="rptpassword" name="rptpassword"><br>
-        <input class="get-started" type="submit" value="Get started">
-        <p>or</p>
-        <a href="#">Sign in</a>
-    </form>
 
 
 </body>
