Prideta Sign in ir Forgot password formos, bei istaisyta klaidu

--- a/signin.html
+++ b/signin.html
@@ -6,27 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4-SignUp</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/signin.css"
 </head>
 <body>
     <main>
         <div class="left-side">
-            <h1>Sign up</h1>            
+            <h1>Sign in</h1>
             <a href="#">Privacy policy & terms of service</a>
         </div>
     
         <form>
             <a href="#">&#x2573;</a><br>      
             <label for="username">Username</label><br>
-            <input type="text" id="username" name="username"><br>
-            <label for="email">E-mail</label><br>
-            <input type="email" id="email" name="email"><br>
+            <input type="text" id="username" name="username"><br>           
             <label for="password">Password</label><br>
-            <input type="password" id="password" name="password"><br>
-            <label for="rptpassword">Repeat password</label><br>
-            <input type="password" id="rptpassword" name="rptpassword"><br>
-            <input class="get-started" type="submit" value="Get started">
+            <input type="password" id="password" name="password"><br>           
+            <input class="get-started" type="submit" value="Sign in">
             <p>or</p>
-            <a class="formlink" href="./signin.html">Sign in</a>
+            <a class="formlink" href="./forgotpassword.html">Forgot password?</a>
+            <a class="formlink" href="./index.html">Create new account</a>
         </form>
     </main>
 
