--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -6,25 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4-SignUp</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/forgotpassword.css">
 </head>
 <body>
     <main>
         <div class="left-side">
-            <h1>Sign up</h1>            
+            <h1>Forgot password?</h1>
+            <p>Please type in your email and we will send you password change request</p>
             <a href="#">Privacy policy & terms of service</a>
         </div>
     
         <form>
-            <a href="#">&#x2573;</a><br>      
-            <label for="username">Username</label><br>
-            <input type="text" id="username" name="username"><br>
+            <a href="#">&#x2573;</a><br>                  
             <label for="email">E-mail</label><br>
-            <input type="email" id="email" name="email"><br>
-            <label for="password">Password</label><br>
-            <input type="password" id="password" name="password"><br>
-            <label for="rptpassword">Repeat password</label><br>
-            <input type="password" id="rptpassword" name="rptpassword"><br>
-            <input class="get-started" type="submit" value="Get started">
+            <input type="email" id="email" name="email"><br>           
+            <input class="get-started" type="submit" value="Change password">
             <p>or</p>
             <a class="formlink" href="./signin.html">Sign in</a>
         </form>
